# Autonomy

./: .rosinstall  .rosinstall.bak  README.md
aruco_ros/aruco_ros/launch/: single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
autonomous_landing/: CMakeLists.txt  mavros_posix_sitl.launch  package.xml  velodyne.world
autonomous_landing/src/: aruco_simple.cpp  camera_node.cpp  main.cpp  offb_node.cpp
