<package>
  <name>autonomous_landing</name>
  <description>CONNECTION TO GAZEBO</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>3.1.2</version>
  <author>Michael</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hexa_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
</package>
